# cleanmd2epub

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  describe.md  process_book.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  temp_parser.py  test_flash.py  test_gemini.py  test_isbn.py  test_parser.py  跨文化阅读启示 张隆溪 copy.md  跨文化阅读启示 张隆溪.md  跨文化阅读启示 张隆溪_final.md  跨文化阅读启示张隆溪.md
.cache/: block_-1133467594274190700.pkl  block_-1133566276433812757.pkl  block_-1154740548700413970.pkl  block_-1155998679530758801.json  block_-1325136382969969784.json  block_-1403741079441013181.json  block_-1434462286033021570.json  block_-1530005309197948705.json  block_-1638891269755855288.json  block_-1795477242806846847.pkl  block_-1851393110340070714.pkl  block_-1960000666043039350.pkl  block_-2004787366087704974.pkl  block_-2128092335352410056.json  block_-2132604233737352354.json  block_-2146997598581159530.pkl  block_-2386241778163736227.json  block_-2413676938073842434.pkl  block_-2495845426930516688.json  block_-2497785240273716914.json  block_-251157165579249051.pkl  block_-2550140126738764994.pkl  block_-256252078359591818.pkl  block_-2621215322613976471.json  block_-2642982257902357923.json  block_-271501984738880169.pkl  block_-2921159488728381650.json  block_-3050284719114458332.pkl  block_-3084737507361248766.pkl  block_-308652737186966610.pkl  block_-309644989144963675.json  block_-3162683330016642845.json  block_-3217558928312320581.pkl  block_-33073233731915204.json  block_-3458109162493317301.json  block_-3547316604153853695.pkl  block_-3566948264761014225.json  block_-3739848344054587185.json  block_-3808826439354615085.pkl  block_-3824589762787075443.pkl  (+169 more)
.cache/douban/: metadata_7-5343-7722-6.json
cleanmd/: __init__.py  __main__.py  cleaner.py  config.py  converter.py  md2epub.py  processor.py  splitter.py  utils.py
src/: __init__.py  config.py
src/cli/: main.py  process_book.py
src/core/: __init__.py  config.py  document_parser.py  epub_generator.py  prompts.py  text_processor.py
src/interfaces/: __init__.py  document_parser.py  output_generator.py  result_recorder.py  text_processor.py
src/utils/: cache.py  douban_crawler.py  file_utils.py  logger.py  result_recorder.py
templates/epub/: chapter.html  cover.html  title.html
templates/styles/: epub.css
templates/translations/: zh.yaml
tests/: test_basic.py  test_cross_cultural.py  test_document_parser.py  test_douban_crawler.py  test_epub_generator.py  test_sample.py  test_text_processor.py
tests/test_cache/metadata/: metadata_9787536692930.json
